--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,6 +8,7 @@ dataSources:
     source:
       address: "0x8e493663b678fd5eea3b36a2d99e8faeb78ffac9"
       abi: NftMarketplace
+      startBlock: 11057872
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
